Стили для inspired-section

--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -30,6 +30,7 @@ a{
 
 @import '_banner-section.scss';
 @import '_benefits-section.scss';
+@import '_inspired-section.scss';
 
 @media(max-width:850px){
     .menu-container{
