--- a/src/style/_banner-section.scss
+++ b/src/style/_banner-section.scss
@@ -6,11 +6,11 @@
     background-position: top;
     color: $text-white;
 }
-#header-section{
+#header{
     padding: 50px 0px;
     font-size: 18px;
 }
-.header-logo{
+.menu-logo{
     max-width: 85px;
 }
 .menu-container{
@@ -33,7 +33,7 @@
     right: 0;
     top: 36px;
     height: 0;
-    transition: height 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: height .5s;
     overflow: hidden;
     z-index: 999;
     .menu-list__item{
@@ -45,7 +45,7 @@
         &:last-child{
             border: none;
         }
-        border-bottom: 1px solid white;
+        border-bottom: 1px solid #fff;
     }
 }
 .open{
@@ -59,8 +59,7 @@
     padding: 180px 100px;
 }
 .banner-title{
-    // font-size: 50px;
-    font-size: calc(24px + 26 * (100vw / 1440));
+    font-size: calcFontSize(24px, 26);
     font-weight: bold;
     margin-bottom: 20px;
     max-width: 640px;
