--- a/src/style/_prefecture-section.scss
+++ b/src/style/_prefecture-section.scss
@@ -28,7 +28,7 @@
 }
 .pr-ng-item__title{
     color: $text-main-color;
-    font-size: calc(18px + 12 * (100vw / 1440));
+    font-size: calcFontSize(18px, 12);
     line-height: 40px;
     margin-bottom: 85px;
 }
